# charli3-pull-oracle-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  nodes.json  pyproject.toml  ruff.toml
.github/workflows/: integration_tests.yml
artifacts/: aiken.toml  plutus.json  testnet_plutus.json
charli3_offchain_core/blockchain/: chain_query.py  exceptions.py  network.py  transactions.py
charli3_offchain_core/cli/: base.py  contracts.py  escrow.py  exceptions.py  governance.py  main.py  oracle.py  platform.py  reference_script.py  rewards.py  settings.py  setup.py  transaction.py
charli3_offchain_core/client/: odv.py
charli3_offchain_core/constants/: colors.py  status.py
charli3_offchain_core/contracts/: aiken_loader.py  plutus_v3_contract.py
charli3_offchain_core/models/: client.py  extension_types.py  node_types.py  oracle_datums.py  oracle_redeemers.py  reward_escrow.py
charli3_offchain_core/oracle/: config.py  exceptions.py
docs/: configuration.md  deployment.md  oracle_aggregate_tx_cli.md  oracle_transaction_cli.md
examples/: aggregate_simulation_tx_config.yml  client.yaml  mainnet.yaml  nodes.json  simulator.yaml  testnet.yaml
integration-tests/: configuration.yml  run_integration_tests.sh
integration-tests/config/: env  node.properties
integration-tests/scripts/: docker-compose.yml  info.sh  start.sh
integration-tests/tests/: async_utils.py  base.py  governance.py  pytest.ini  test_add_nodes.py  test_aggregate.py  test_deployment.py  test_deployment_multisig.py  test_dismiss_rewards.py  test_edit_settings.py  test_edit_settings_multisig.py  test_node_collect.py  test_oracle_pause.py  test_oracle_remove.py  test_oracle_resume.py  test_platform_auth.py  test_platform_auth_multisig.py  test_platform_collect.py  test_scale_up.py  (+6 more)
(+80 files in other folders)
