[tool.poetry]
name = "odv-multisig-charli3-offchain-core"
version = "0.1.0"
description = "Core off-chain infrastructure for Charli3's Oracle Data Verification (ODV) system with multisig capabilities"
authors = ["Deep Bhatt <deep.bhatt@charli3.io>"]
readme = "README.md"
packages = [
    { include = "charli3_offchain_core" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opshin = "^0.23.1"
pycardano = { git = "https://github.com/Charli3-Official/pycardano.git", branch = "odv-multisig"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
charli3 = "charli3_offchain_core.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
