[tool.poetry]
name = "odv-multisig-charli3-offchain-core"
version = "0.1.0"
description = "Core off-chain infrastructure for Charli3's Oracle Data Verification (ODV) system with multisig capabilities"
authors = ["Deep Bhatt <deep.bhatt@charli3.io>"]
readme = "README.md"
packages = [
    { include = "charli3_offchain_core" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opshin = "^0.24.4"
pycardano = { git = "https://github.com/Charli3-Official/pycardano.git", branch = "odv-multisig-v0.17.0-with-kupo-queries"}
tabulate = "^0.9.0"
aiohttp = "^3.12"
pytest = "^8.3.5"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.25.3"
pytest-ordering = "^0.6"

[tool.poetry.scripts]
charli3 = "charli3_offchain_core.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
